# medusab-segmenter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-release.yml
packaging/linux/: medusab-segmenter.desktop
src/: main.cpp  mainwindow.cpp  mainwindow.h  ortcompat.h  segmentationsession.cpp  segmentationsession.h
